[gd_scene load_steps=2 format=3 uid="uid://dxrorg1km34ay"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_6rd3a"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_6rd3a")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -85.0
offset_right = 95.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Paused" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="QuitButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
